@@ -92,6 +92,12 @@
 *
 */
 
+#if defined( _MSC_VER ) && ( _MSC_VER >= 1400 )
+   #if !defined( _CRT_SECURE_NO_WARNINGS )
+      #define _CRT_SECURE_NO_WARNINGS
+   #endif
+#endif
+
 #include "hbole.h"
 #include <tchar.h>
 #include <stdlib.h>
