@@ -8,6 +8,10 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2012-06-20 15:15 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * contrib/gtwvw/gtwvw.c
+    ! missing from previous commit
+
 2012-06-20 14:20 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * winmake/makefile.vc
     ! pacify MSVC warning on overriding /TP with /TC
